5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1637_2704.log
== TEST (2019-04-09 11:18:51) 
-- CODE:
nota = float(input("Nota do aluno: "))
bon = input("Bonifacao: ")

if (nota >= 0)
	print(nota)
else:
	print(bon)
-- ERROR:
File "XXXX", line 4
    if (nota >= 0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:00) 
-- CODE:
nota = float(input("Nota do aluno: "))
bon = input("Bonifacao: ")

if (nota>=0)
	print(nota)
else:
	print(bon)
-- ERROR:
File "XXXX", line 4
    if (nota>=0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:08) 
-- CODE:
nota = float(input("Nota do aluno: "))
bon = input("Bonifacao: ")

if (nota >= 0):
	print(nota)
else:
	print(bon)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:54) 
-- CODE:
nota = float(input("Nota do aluno: "))
bon = input("Bonifacao: ")

if (nota >= 0):
	print(float(nota))
else:
	print(bon)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:22:42) 
-- CODE:
nota = float(input("Nota do aluno: "))
bon = input("Bonifacao: ")

if (nota >= 0):
	mensagem = "bonifaçao"
else:
	mensagem = "bomifaçao"
print(nota)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:23:16) 
-- CODE:
nota = float(input("Nota do aluno: "))
bon = input("Bonifacao: ")

if (nota >= 0):
	mensagem = "bonifaçao"
else:
	mensagem = "bomifaçao"
print(mensagem)
-- OUTPUT:
bonifaçao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:23:44) 
-- CODE:
nota = float(input("Nota do aluno: "))
bon = input("Bonifacao: ")

if (nota >= 0):
	mensagem = "bonifaçao"
else:
	mensagem = "bomifaçao"
	print(mensagem)
-- OUTPUT:
bonifaçao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:26:34) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (n >= 0):
	print(float(n * 0.10))
else:
	print(n)
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:27:12) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (n >= 0):
	print(float(n + (n * 0.10))
else:
	print(n)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:27:25) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (n >= 0):
	print(float(n + (n * 0.10))
else:
	print(n)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:27:41) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (n >= 0):
	print(float(n + (n * 0.10))
else:
	print(n)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:28:15) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (n >= 0):
	print(float(n + (n * 0.10))
			
else:
	print(n)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:28:28) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (n >= 0):
	print(float(n + (n * 0.10))
			
else:
	print(b)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:28:31) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (n >= 0):
	print(float(n + (n * 0.10))
			
else:
	print(n)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:30:11) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (b.upper() == "S"):
	print(float(n + (n * 0.10))
			
else:
	print(n)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:31:09) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (b.upper() == "S"):
	print((n + (n * 0.10))
			
else:
	print(n)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:31:19) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (b.upper() == "S"):
	print((n + (n * 0.10))
else:
	print(n)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:31:51) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (b.upper() == "S"):
	print(n + (n * 0.10))
else:
	print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:32:03) 
-- CODE:
n = float(input("Nota do aluno: "))
b = input("Bonifacao: ")

if (b.upper() == "S"):
	print(n + (n * 0.10))
else:
	print(n)
-- EXECUTION TIME:
0.228575
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
